[workspace]
members = [
    "derive_fuzztest",
    "derive_fuzztest/fuzz",
    "derive_fuzztest_macro",
]
resolver = "2"

[workspace.lints.rust]
missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_results = "deny"

[workspace.lints.clippy]
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# local crates
derive_fuzztest = { version = "0.1.2", path = "derive_fuzztest" }
derive_fuzztest_macro = { version = "0.1.2", path = "derive_fuzztest_macro" }

# from crates.io
arbitrary = "1.3.2"
libfuzzer-sys = "0.4.7"
pretty_assertions = "1.4.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0"
proptest = "1.4.0"
proptest-arbitrary-interop = "0.1.0"
quickcheck = "1.0.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
publish = true
categories = ["development-tools::testing"]
keywords = ["fuzz", "property testing"]
repository = "https://github.com/google/rust-derive-fuzztest"
