[package]
name = "derive_fuzztest"
description = "A Rust proc-macro to enable using the same implementation for fuzz tests and property tests."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
arbitrary.workspace = true
derive_fuzztest_macro.workspace = true
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

[features]
default = ["quickcheck"]
quickcheck = ["dep:quickcheck", "derive_fuzztest_macro/quickcheck"]
proptest = [
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "derive_fuzztest_macro/proptest",
]

[lints]
workspace = true
