[package]
name = "derive_fuzztest_macro"
description = "Macro implementation for derive_fuzztest"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["extra-traits"]}

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true

[features]
quickcheck = []
proptest = []

[lib]
proc-macro = true
doc = false
