[package]
name = "derive_fuzz_example"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
derive_fuzztest = { workspace = true, features = ["all"]}
quickcheck.workspace = true

[target.'cfg(fuzzing)'.dependencies]
libfuzzer-sys.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
